@@ -88,10 +88,18 @@ default_alias = simple
 [layout_raid1]
 # number of data replicates for raid1 layout (default is 2)
 repl_count = 2
-# Active the md5 calculation at creation of a new extent.
-# Any other value than "yes" disables the md5 calculation of each extent.
-# default: yes
-#extent_md5 = yes
+# Activate the XXH128 calculation at creation of a new extent.
+# (In environments where xxhash has a version lower than 0.8.0, this parameter
+# is ignored and the xxh128 is not computed. If set to "yes", the client will
+# issue a warning to indicate this inconsistency.)
+# Any other value than "yes" disables the XXH128 calculation of extent hash.
+# default: yes (no if xxh128 is not available)
+#extent_xxh128 = yes
+
+# Activate the MD5 calculation at creation of a new extent.
+# Any other value than "yes" disables the MD5 calculation of each extent.
+# default: no (yes if xxh128 is not available)
+#extent_md5 = no
 
 [alias "simple"]
 # default alias for put operations
