@@ -41,6 +41,7 @@ BuildRequires: automake
 BuildRequires: libtool
 BuildRequires: make
 BuildRequires: openssl-devel >= 0.9.7
+BuildRequires: xxhash-devel
 
 Requires: %{postgres_prefix}-server
 Requires: %{postgres_prefix}-contrib
@@ -61,6 +62,7 @@ Requires: %{python_prefix}-tabulate
 Requires: protobuf
 Requires: protobuf-c
 Requires: openssl >= 0.9.7
+Requires: xxhash-libs
 
 %description
 Phobos aims to implement high performance distributed object storage on a wide
